fixed styling and alignment of post show page to include issue image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,9 +65,13 @@
 }
 
 .manip-buttons {
-  float: left;
   position: relative;
-  bottom: 12px;
+  left: 80%;
+}
+
+.edit-button {
+  position: relative;
+  left: 5%;
 }
 
 .post-content {
@@ -81,11 +85,22 @@
   word-wrap: break-word;
   position: relative;
   left: 25%;
+  bottom: 40px;
   width: 50%;
 }
 
 .post-title {
   position: relative;
-  right: 39.5%;
-  top: 15px;
+  bottom: 55px;
+}
+
+.show-images {
+  position: relative;
+  right: 15%;
+}
+
+.add-image {
+  position: relative;
+  bottom: 45px;
+  left: 1%;
 }
